
  - Add support for $CONFIGUREDIR and $CONFIGURELOG variables to control
    the directory and logs for configuration tests.

  - Add support for a $INSTALLSTR variable.

  - Add support for $RANLIBCOM and $RANLIBCOMSTR variables (which fixes
    a bug when setting $ARCOMSTR).

  From Amir Szekely:

  - Add use of $CPPDEFINES to $RCCOM (resource file compilation) on MinGW.

  From Dobes Vandermeer:

  - Add support for SCC and other settings in Microsoft Visual
    Studio project and solution files:  $MSVS_PROJECT_BASE_PATH,
    $MSVS_PROJECT_GUID, $MSVS_SCC_AUX_PATH, $MSVS_SCC_LOCAL_PATH,
    $MSVS_SCC_PROJECT_NAME, $MSVS_SCC_PROVIDER,

  - Add support for using a $SCONS_HOME variable (imported from the
    external environment, or settable internally) to put a shortened
    SCons execution line in the Visual Studio project file.

  From David J. Van Maren:

  - Only filter common prefixes from source files names in Visual Studio
    project files if the prefix is a complete (sub)directory name.

  From Thad Ward:

  - If $MSVSVERSIONS is already set, don't overwrite it with
    information from the registry.



RELEASE 0.96.91 - Thu, 08 Sep 2005 07:18:23 -0400

  NOTE:  This was a pre-release of 0.97 for testing purposes.

  From Chad Austin:

  - Have the environment store the toolpath and re-use it to find Tools
    modules during later Copy() or Tool() calls (unless overridden).

  - Normalize the directory path names in SConsignFile() database
    files so the same signature file can interoperate on Windows and
    non-Windows systems.

  - Make --debug=stacktrace print a stacktrace when a UserError is thrown.

  - Remove an old, erroneous cut-and-paste comment in Scanner/Dir.py.

  From Stanislav Baranov:

  - Make it possible to support with custom Alias (sub-)classes.

  - Allow Builders to take empty source lists when called.

  - Allow access to both TARGET and SOURCE in $*PATH expansions.

  - Allow SConscript files to modify BUILD_TARGETS.
